kubernetes/gabernetes/apps/nightscout/resources/trmnl/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-trmnl-nightscout
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/egress-trmnl-nightscout: "true"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: nightscout
            app.kubernetes.io/name: trmnl
      toPorts:
        - ports:
            - port: "80"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: trmnl
  namespace: nightscout
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: trmnl
  ingress:
    - fromEndpoints:
        - matchLabels:
            policy.gabe565.com/egress-trmnl-nightscout: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
